Fixed title formatting on small displays

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,12 +3,12 @@ a {
 	color: white;
 
 	&:hover {
-		color: gray;
+		color: lightgray;
 	}
 }
 
 li {
-	margin-bottom: 5px;
+	margin-bottom: 12px;
 }
 
 body {
@@ -71,8 +71,10 @@ $glow-2: lighten($glow-3, 10%);
 }
 
 .twab {
-	margin: 0 15px 30px 15px;
+	padding: 0 15px 30px 15px;
 	text-align: center;
+	box-sizing: border-box;
+	max-width: 100%;
 
 	&__ {
 		&heading {
@@ -87,20 +89,17 @@ $glow-2: lighten($glow-3, 10%);
 			border: 1px solid white;
 			display: block;
 			margin: 10px 0;
-
-
 		}
 
 		&link {
+			box-sizing: border-box;
+			max-width: 100%;
 			z-index: 10;
-			padding: 10px;
-			position: absolute;
-			width: 500px;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			padding: 15px;
+			position: relative;
 			backdrop-filter: blur(20px);
 			-webkit-backdrop-filter: blur(20px);
+			background-image: radial-gradient(rgba(0, 0, 0, 0.3), rgba(255, 0, 0, 0));
 			line-height: initial;
 
 			&-- {
@@ -139,16 +138,18 @@ $glow-2: lighten($glow-3, 10%);
 		}
 
 		&image {
-			max-width: 600px;
+			// max-width: 600px;
+			box-sizing: border-box;
 
-			> img {
-				width: 100%;
-			}
+			max-width: 100%;
+			padding: 5vmin 5vmin;
+
+			background-position: center;
+			background-size: cover;
 
 			z-index: 99;
 			position: relative;
 			margin: 0;
-			padding: 0;
 			line-height: 0;
 		}
 
@@ -169,6 +170,32 @@ $glow-2: lighten($glow-3, 10%);
 					color: indianred;
 				}
 			}
+		}
+	}
+}
+
+.list {
+	display: block;
+	padding: 0 15px 30px 15px;
+
+	ul {
+		list-style: none;
+		padding-left: 0;
+	}
+
+	li {
+		padding-left: 0;
+		margin-left: 0;
+	}
+
+	&__ {
+		&entry-heading {
+			font-weight: bold;
+			margin-bottom: 2px;
+		}
+
+		&entry-text {
+			opacity: 0.7;
 		}
 	}
 }
